feat: complete PISP side of linking flow
